--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: #222;
+    color: #fff;
 }
 
 .background-container {
@@ -14,14 +16,13 @@ body {
 
 .profile-bg {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.3;
+    height: auto;
+    opacity: 0.5;
     z-index: -1;
-    transition: opacity 0.5s ease;
 }
 
 .about-me {
@@ -35,11 +36,12 @@ body {
 }
 
 .skill-card {
-    border: 1px solid #ddd;
+    border: 1px solid #333;
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    background-color: #333;
 }
 
 .skill-header {
@@ -51,7 +53,7 @@ body {
 
 .exp-years {
     font-size: 14px;
-    color: #777;
+    color: #aaa;
 }
 
 .skill-description h4 {
